# linux_serial_port

./: CMakeLists.txt  README.md
include/serial_port/: serial_port.hpp  serial_port_exception.hpp
src/: CMakeLists.txt  Config.cmake.in  serial_port.cpp
